<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>

    <!-- Menu Items -->
    <string name="menu_books">List of books</string>
    <string name="menu_scan">Scan/add a book</string>
    <string name="menu_about">About this app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_settings">Settings</string>
    <string name="scan_button">Scan</string>

    <string name="hint_search">Search library</string>
    <string name="hint_input">Enter ISBN-10 or ISBN-13 digits</string>

    <string name="description_book_cover">Book cover</string>
    <string name="description_save">Save book</string>
    <string name="description_delete">Delete book</string>
    <string name="description_search">Search library</string>
    <string name="description_back">Go back</string>

    <string name="pref_startScreen">Select start screen</string>
    <string name="action_share">Share</string>
    <string name="share_text">A must read book: </string>

    <string name="search_for_isbn">Searching for ISBN: </string>

    <string name="toast_done_pressed">Please enter a valid 10-digit or 13-digit ISBN</string>
    <string name="toast_no_auto_focus">Sorry, your camera does not support auto-focus\nScanning may not work</string>

    <!-- Error Messages -->
    <string name="error_add_book_other">Oops! Could not add this book\nPlease try later</string>
    <string name="error_add_book_not_found">Sorry, could not find book with this ISBN</string>
    <string name="error_add_book_already_present">This book is already in your library</string>
    <string name="error_add_book_network">Please check your network connection and try again</string>
    <string name="error_add_book_server">Sorry, could not reach the server\nPlease try later</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">
        This application gets book information from a Google API.
        All titles, cover images, and author information come from there.
        The original version of this app was built by Sascha Jaschke, and a modified version
        is given to students in the Udacity Android Nanodegree program.</string>
</resources>
