<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:fillViewport="false"
            android:layout_weight="1">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top">

                <LinearLayout
                    android:id="@+id/fullBookTitleLayout"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/fullBookTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:paddingTop="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="@dimen/head_line"
                        android:textIsSelectable="true"
                        android:textStyle="bold"/>

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="goBack"
                        android:src="@drawable/ic_action_undo"
                        style="?android:attr/buttonBarButtonStyle"
                        android:contentDescription="@string/description_back"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/fullBookTitleLayout"
                    android:layout_alignLeft="@+id/fullBookTitleLayout"
                    android:layout_alignStart="@+id/fullBookTitleLayout"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:contentDescription="@string/description_book_cover"/>

                <TextView
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:layout_toEndOf="@+id/fullBookCover"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@+id/fullBookCover"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="10dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="left|start|top"/>

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="right|end|top"
                        android:textStyle="bold"/>
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end">

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                style="?android:attr/buttonBarButtonStyle"
                android:src="@drawable/ic_action_discard"
                android:contentDescription="@string/description_delete"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>


